<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.opengeo</groupId>
  <artifactId>geonode-geoserver-ext</artifactId>
  <packaging>jar</packaging>
  <version>0.1-SNAPSHOT</version>
  <name>GeoNode GeoServer Extensions</name>

  <repositories>
    <repository>
      <id>opengeo</id>
      <name>OpenGeo Maven Repository</name>
      <url>http://repo.opengeo.org/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>org.mapfish</id>
      <url>http://dev.mapfish.org/maven/repository</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <url>http://download.osgeo.org/webdav/geotools</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>main</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>rest</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>web-security</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>printing</artifactId>
      <version>${geoserver.version}</version>
      <exclusions>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>restconfig</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>excel</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.opengeo.geoserver</groupId>
      <artifactId>importer</artifactId>
      <version>3.0-SNAPSHOT</version>
    </dependency>
    <!--dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>ftp</artifactId>
      <version>${geoserver.version}</version>
    </dependency-->
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>web-app</artifactId>
      <type>jar</type>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
		<exclusions>
		  <exclusion>
		    <groupId>net.sf.json-lib</groupId>
		    <artifactId>json-lib</artifactId>
		  </exclusion>
		</exclusions>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
      <version>3.1.0.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <version>3.1.1.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>3.1.1.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>3.1.1.RELEASE</version>
    </dependency>

    <!-- GeoJSON module dependencies -->
    <dependency>
      <groupId>net.sf.json-lib</groupId>
      <artifactId>json-lib</artifactId>
      <version>2.2.3</version>
      <classifier>jdk15</classifier>
    </dependency>
    
    <!-- This dependency is temporary in order to hold a fake process while developing the REST process wrapper -->
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-process</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    
    <!--  test dependencies  -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>main</artifactId>
      <scope>test</scope>
      <classifier>tests</classifier>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>web-core</artifactId>
      <scope>test</scope>
      <classifier>tests</classifier>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>com.mockrunner</groupId>
      <artifactId>mockrunner</artifactId>
      <version>0.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-sample-data</artifactId>
      <version>${geotools.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>2.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymockclassextension</artifactId>
      <version>2.3</version>
      <scope>test</scope>
    </dependency>
    
    
    <!-- Jetty runner dependencies -->
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-naming</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-plus</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <properties>
    <geotools.version>8.0-RC2</geotools.version>
    <geoserver.version>2.2-RC1</geoserver.version>
    <jetty.version>6.1.8</jetty.version>
    <maven.test.search.classdir>true</maven.test.search.classdir>
  </properties>
  <profiles>
    <profile>
      <id>arcsde</id>
      <dependencies>
        <dependency>
          <groupId>org.geoserver.extension</groupId>
          <artifactId>arcsde</artifactId>
          <version>${geoserver.version}</version>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>sdeLibs</id>
      <dependencies>
        <dependency>
          <groupId>com.esri</groupId>
          <artifactId>jsde_sdk</artifactId>
          <version>${sde.version}</version>
        </dependency>
        <dependency>
          <groupId>com.esri</groupId>
          <artifactId>jpe_sdk</artifactId>
          <version>${sde.version}</version>
        </dependency>
      </dependencies>
    </profile>
   </profiles>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <source>1.5</source>
          <target>1.5</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.4</version>
        <configuration>
            <argLine>-XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>maven-jetty-plugin</artifactId>
        <version>6.1.10</version>
        <configuration>
          <stopPort>8890</stopPort>
          <stopKey>geonode-stop</stopKey>
          <scanIntervalSeconds>30</scanIntervalSeconds>
          <contextPath>/geoserver</contextPath>

          <systemProperties>
            <systemProperty>
              <name>GEOSERVER_DATA_DIR</name>
              <value>${project.build.directory}/geoserver/data</value>
            </systemProperty>
          </systemProperties>

          <webApp>${project.build.directory}/geoserver</webApp>
          
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <descriptors>
            <descriptor>assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <warName>geoserver</warName> 
          <webappDirectory>${project.build.directory}/geoserver</webappDirectory> -->
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>war</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>

